Se añade ícono de scroll down en el Hero

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       </div>
     </section>
 
+    <img id="scrollIcon" src="./src/media/img/icons/scroll-down-arrow.svg" alt="Scroll down">
+
   </header>
 
   <main>
