Refactorización del Hero

--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
         <img src="./src/media/img/punto_de_mate_logo.svg" alt="Logo Punto de Mate">
         <h1>PUNTO DE MATE</h1>
       </div>
-  
-      <div class="nav__menu">
-        <ul>
+
+      <div id="menuBtn">
+        <div class="menuBtn__line line1"></div>
+        <div class="menuBtn__line line2"></div>
+        <div class="menuBtn__line line3"></div>
+      </div>
+      
+      <!-- <div id="menuContainer"> -->
+
+        <ul class="nav__menu">
           <li class="navItem">
             <a href="#products">Productos</a>
           </li>
@@ -41,13 +48,14 @@
             <a href="#contact">Contacto</a>
           </li>
         </ul>
-      </div>
-  
-      <div class="nav__ig">
-        <a href="https://instagram.com/puntodemate" target="_blank">
-          <img src="./src/media/img/icons/ig-icon.svg" alt="Instagram Punto de Mate">
-        </a>
-      </div>
+    
+        <div class="nav__ig">
+          <a href="https://instagram.com/puntodemate" target="_blank">
+            <img src="./src/media/img/icons/ig-icon.svg" alt="Instagram Punto de Mate">
+          </a>
+        <!-- </div> -->
+
+      </div> 
     </nav>
 
     <!--Call to action section -->
