--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <main>
     <section id="products">
-      <h2 class="sectionTitle">NUESTROS PRODUCTOS</h2>
+      <h2 class="sectionTitle">Nuestros productos</h2>
 
       <!-- Products filter section-->
       <ul class="filter">
