--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
   <footer>
     <img src="./src/media/img/punto_de_mate_logo.svg" alt="Logo Punto de Mate">
-    <p>Punto de Mate 2025 | Diseñado y desarrollado por <a href="https://www.linkedin.com/in/santirojo/" target="_blank">Santi Rojo</a>.</p>
+    <p>Punto de Mate 2025 | Desarrollado por <a href="https://www.linkedin.com/in/santirojo/" target="_blank">Santi Rojo</a>.</p>
   </footer>
 </body>
 </html>
