Estilado de menú responsive

--- a/index.html
+++ b/index.html
@@ -234,5 +234,7 @@
     <img src="./src/media/img/punto_de_mate_logo.svg" alt="Logo Punto de Mate">
     <p>Punto de Mate 2025 | Desarrollado por <a href="https://www.linkedin.com/in/santirojo/" target="_blank">Santi Rojo</a>.</p>
   </footer>
+
+  <script src="./main.js"></script>
 </body>
 </html>
