Desarrollo funcionalidad menú hamburguesa

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
       </div>
 
       <div id="menuBtn">
-        <div class="menuBtn__line line1"></div>
-        <div class="menuBtn__line line2"></div>
-        <div class="menuBtn__line line3"></div>
+        <div id="menuBtnTopLine" class="menuBtn__line"></div>
+        <div id="menuBtnMiddleLine" class="menuBtn__line"></div>
+        <div id="menuBtnBottomLine" class="menuBtn__line"></div>
       </div>
       
-      <div id="menuContainer">
+      <div id="menuContainer" class="menu__container" >
 
         <ul class="nav__menu">
           <li class="navItem">
@@ -235,6 +235,7 @@
     <p>Punto de Mate 2025 | Desarrollado por <a href="https://www.linkedin.com/in/santirojo/" target="_blank">Santi Rojo</a>.</p>
   </footer>
 
-  <script src="./main.js"></script>
+  <script src="./menu.js"></script>
+<!--   <script src="./main.js"></script> -->
 </body>
 </html>
