Desarrollo de funciones de fetch de productos, paginación, renderizado y filtrado para la sección Nuestros Productos

--- a/index.html
+++ b/index.html
@@ -97,10 +97,14 @@
 
           <div class="galleryGridsContainer">
             
-              <div class="galleryGrid">
+              <div id="galleryGrid" class="galleryGrid">
 
                 <div class="productItem">
-                  <img src="./src/media/img/products/mate-carroussel-example.jpg" alt="">
+                  <img class="productItem__img" src="./src/media/img/products/mate-carroussel-example.jpg" alt="">
+                </div>
+
+                <div class="productItem">
+                   <img class="productItem__img" src="https://res.cloudinary.com/dvi73u4y0/image/upload/v1738622147/Camionero_1_arriba_dp0vg6.jpg" alt="prueba mate">
                 </div>
 
                 <div class="productItem">
@@ -128,11 +132,7 @@
                 </div>
 
                 <div class="productItem">
-                  <!--  <img src="./src/media/img/products/mate-carroussel-example.jpg" alt=""> -->
-                </div>
-
-                <div class="productItem">
-                  <!--  <img src="./src/media/img/products/mate-carroussel-example.jpg" alt=""> -->
+                   <!-- <img src="./src/media/img/products/mate-carroussel-example.jpg" alt=""> -->
                 </div>
 
               </div>
@@ -236,6 +236,6 @@
   </footer>
 
   <script src="./menu.js"></script>
-<!--   <script src="./main.js"></script> -->
+  <script src="./main.js"></script>
 </body>
 </html>
