--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
 
       </div>
 
-      <div class="pagination">
-        <div class="pagination__item pagination__item--active"></div>
-        <div class="pagination__item"></div>
-        <div class="pagination__item"></div>
-        <div class="pagination__item"></div>
-        <div class="pagination__item"></div>
+      <div class="pageIndicator__container">
+        <div class="pageIndicator pageIndicator--active"></div>
+        <div class="pageIndicator"></div>
+        <div class="pageIndicator"></div>
+        <div class="pageIndicator"></div>
+        <div class="pageIndicator"></div>
       </div>
       
     </section>
