Se crea función de cambio en dots de paginación al moverse entre páginas del catálogo

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <div class="galleryGridsContainer">
             
-              <div id="galleryGrid" class="galleryGrid">
+              <!-- <div id="galleryGrid" class="galleryGrid">
 
                 <div class="productLoader">
                 </div>
@@ -126,7 +126,8 @@
                 <div class="productLoader">
                 </div>                
 
-              </div>
+              </div> -->
+
           </div>
           
         </div>
@@ -182,6 +183,7 @@
   </footer>
 
   <script src="./menu.js"></script>
+  <script src="./gallery.js"></script>
   <script src="./main.js"></script>
 </body>
 </html>
