--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   </footer>
 
   <script src="./menu.js"></script>
-  <script src="./gallery.js"></script>
-  <script src="./main.js"></script>
+  <script type="module" src="./refactoredCode/refactoredMain.js"></script>
+  <script type="module" src="./catalog.js"></script>
 </body>
 </html>
