Comienzo de desarrollo de modal de detalle de producto

--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
   <title>Punto de Mate</title>
 </head>
 <body>
+  <section id="productDetailModal">
+    <div id="closeModalBtn">
+      <div id="closeSpanContainer">
+        <span>X</span>
+      </div>
+    </div>
+    <div id="productDetailContainer">
+      <img src="./src/media/img/products/mate-carroussel-example.jpg" alt="">
+      <div>
+        <div>
+          <p>Mate Imperial</p>
+          <p>$23.000</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam, error. Impedit quae exercitationem debitis explicabo illum inventore magnam accusantium ullam neque deleniti repellat quia tempora, non quasi, sequi maiores quis?
+            Ea minima eius libero! Illo tempora aliquid soluta repellat reprehenderit a explicabo minima mollitia rerum iure. Quae officiis sapiente perspiciatis debitis sint exercitationem aperiam quisquam quas deleniti.</p>
+        </div>
+
+        <div id="ctaBuyProduct">
+          <a href="">¡Quiero el mío!</a>
+        </div>
+
+      </div>
+    </div>
+  </section>
 
   <header id="hero" class="hero">
 
@@ -177,7 +200,7 @@
   </footer>
 
   <script src="./menu.js"></script>
-  <script type="module" src="./refactoredCode/refactoredMain.js"></script>
+  <script type="module" src="./main.js"></script>
   <script type="module" src="./catalog.js"></script>
 </body>
 </html>
