Desarrollo de modal de detalle de producto con sus funciones para abrirlo y cerrarlo

--- a/index.html
+++ b/index.html
@@ -19,24 +19,25 @@
   <title>Punto de Mate</title>
 </head>
 <body>
-  <section id="productDetailModal">
-    <div id="closeModalBtn">
-      <div id="closeSpanContainer">
-        <span>X</span>
+
+  <!-- Product Details Modal -->
+
+  <section id="productDetailsModal" class="productDetailsModal hidden">
+    <div id="productDetailsContainer">
+      <div id="closeModalBtn">
+        <img id="closeModalBtnIcon" src="./src/media/img/icons/close-icon.svg" alt="Cerrar">
       </div>
-    </div>
-    <div id="productDetailContainer">
-      <img src="./src/media/img/products/mate-carroussel-example.jpg" alt="">
-      <div>
-        <div>
-          <p>Mate Imperial</p>
-          <p>$23.000</p>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam, error. Impedit quae exercitationem debitis explicabo illum inventore magnam accusantium ullam neque deleniti repellat quia tempora, non quasi, sequi maiores quis?
-            Ea minima eius libero! Illo tempora aliquid soluta repellat reprehenderit a explicabo minima mollitia rerum iure. Quae officiis sapiente perspiciatis debitis sint exercitationem aperiam quisquam quas deleniti.</p>
+      <img id="productDetailsImg" src="./src/media/img/products/mate-carroussel-example.jpg" alt="">
+      <div id="productDetails">
+        <div id="productInfoContainer">
+          <p id="productName">Mate Imperial</p>
+          <p id="productPrice">$23.000</p>
+          <p id="productDescription">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam, error. Impedit quae exercitationem debitis explicabo illum inventore magnam accusantium ullam neque deleniti repellat quia tempora, non quasi, sequi maiores quis?
+          </p>
         </div>
 
         <div id="ctaBuyProduct">
-          <a href="">¡Quiero el mío!</a>
+          <a id="productUrl" target="_blank">¡Quiero el mío!</a>
         </div>
 
       </div>
@@ -202,5 +203,6 @@
   <script src="./menu.js"></script>
   <script type="module" src="./main.js"></script>
   <script type="module" src="./catalog.js"></script>
+  <script type="module" src="./productDetailModal.js"></script>
 </body>
 </html>
